# Otus_HWs

./: .gitignore  README.md
Otus_Basic/OtusWordCounter/: CMakeLists.txt
Otus_Basic/OtusWordCounter/include/: extra_functions.h
Otus_Basic/OtusWordCounter/src/: count_with_mutex.cpp  extra_functions.cpp
Otus_Basic/Otus_4_ingenerCalc/include/: lexer.hpp  parser.hpp
Otus_Basic/Otus_4_ingenerCalc/src/: parser.cpp
Otus_Basic/Otus_Containers_6/: CMakeLists.txt  README.md  main.cpp
Otus_Basic/Otus_Containers_6/include/: ForwardList.h  List.h  Sequence.h  TestExersize.h  termcolor.hpp
Otus_Basic/Otus_Containers_6/src/: ForwardList.cpp  Sequence.cpp
Otus_Basic/Otus_Course_Project/Otus/: Otus.vcxproj
Otus_Basic/Otus_IngenerCalc_4/include/: states.hpp
Otus_Basic/Otus_WordCounter_8/: README.md
Otus_Basic/Otus_WordCounter_8/include/: count_functions.h
Otus_Basic/Otus_WordCounter_8/src/: count_single_thread.cpp  count_sum_map.cpp  main.cpp
Otus_Basic/Otus_engineering_calculator_4/: CMakeLists.txt  README.md  main.cpp
Otus_Basic/Otus_engineering_calculator_4/include/: astnode.h  lexer.h  parser.h  states.h
Otus_Basic/Otus_engineering_calculator_4/src/: astnode.cpp  lexer.cpp  parser.cpp
Otus_Basic/Otus_firstGitProj/: README.md
Otus_Basic/Otus_homeWork_helloworld/: README.md
Otus_Basic/Otus_homeWork_helloworld_2/: .gitignore  CMakeLists.txt  README.md  example.cpp  main.cpp  todo_move_me_out.cpp
Otus_Basic/Otus_homeWork_statista_5/: CMakeLists.txt  README.md  main.cpp
Otus_Basic/Otus_homeWork_statista_5/include/: interface.h  max.h  mean.h  min.h  procentil90.h  procentil95.h  statistic_includes.h  std.h
Otus_Basic/Otus_homeWork_statista_5/src/: max.cpp  mean.cpp  min.cpp  procentil90.cpp  procentil95.cpp  std.cpp
Otus_Basic/Otus_homework_ugadayChislo_3/: CmakeLists.txt  README.md  high_scores.txt  main.cpp
Otus_Basic/Otus_homework_ugadayChislo_3/include/: game.h  high_score.h
Otus_Basic/Otus_homework_ugadayChislo_3/src/: game.cpp  high_score.cpp  quess_number.cpp
Otus_Proffesional/Bulc_async_server/: CMakeLists.txt
Otus_Proffesional/OTUS_Prof_ci_cd/: CMakeLists.txt  dummy.cpp  dummy.h  main.cpp
Otus_Proffesional/Otus_Bayan/: CMakeLists.txt  CMakeLists.txt.in  Doxyfile
Otus_Proffesional/Otus_Bayan/.github/workflows/: Action.yml
Otus_Proffesional/Otus_Bayan/include/: mask.h  parser.h
Otus_Proffesional/Otus_Bayan/include/filter/: directorie_filter.h  file_filter.h  filters_base.h
Otus_Proffesional/Otus_Bayan/include/scanner/: duplicated.h  files.h
Otus_Proffesional/Otus_Bayan/src/: bayan.cpp  parser.cpp
Otus_Proffesional/Otus_Bayan/src/filter/: directorie_filter.cpp  file_filter.cpp
Otus_Proffesional/Otus_Bayan/src/scanner/: duplicated.cpp  files.cpp
Otus_Proffesional/Otus_IP_filter_2/: CMakeLists.txt
Otus_Proffesional/Otus_bulk_prompt/: README.md
